# pm-history-tracker

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  QUICK_START.md  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  main.rs
crates/api/src/db/: mod.rs
crates/api/src/routes/: history.rs  markets.rs  mod.rs  search.rs
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  main.rs
crates/cli/src/commands/: detail.rs  history.rs  list.rs  mod.rs  search.rs
crates/shared/: Cargo.toml
crates/shared/src/: models.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  main.rs  recorder.rs  scheduler.rs
crates/worker/src/collectors/: kalshi.rs  mod.rs  polymarket.rs
migrations/: 001_create_markets.sql  002_create_price_history.sql
scripts/: backfill_history.sh  backfill_snapshots.py  get_market_history.py  migrate.sh  seed.sh  setup.sh
viz/: requirements.txt  terminal_viz.py
