[package]
name = "pm-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pm-api"
path = "src/main.rs"

[dependencies]
pm-shared = { path = "../shared" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
fuzzy-matcher.workspace = true
