[package]
name = "pm-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pm-worker"
path = "src/main.rs"

[dependencies]
pm-shared = { path = "../shared" }

tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
governor.workspace = true
chrono.workspace = true
